--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-    "name": "ceap-traker",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "pg": "^8.11.3"
-    }
+  "name": "ceap-traker",
+  "version": "1.0.0",
+  "description": "Sistema de seguimiento del Centro de Enseñanza y Aprendizaje Práctico en DGETI Guanajuato",
+  "scripts": {
+    "start": "cd server && npm start",
+    "server": "cd server && npm start",
+    "client": "cd client && npm start",
+    "dev": "cd server && npm run dev",
+    "migrate": "cd server && npm run migrate"
+  }
 }
