--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
